grammar.js
    source_file: $ => repeat(
      choice(
        $.psql_statement,
        seq($._statement, ";")
      ),
    ),

    _statement: $ => choice(
      $.psql_statement,
      $.create_function_statement,
      $.drop_function_statement,
      $.create_table_statement,
      $.create_schema_statement,
      $.create_type_statement,
      $.select_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
      $.grant_statement,
      $.create_trigger_statement,
      $.create_sequence_statement,
      $.create_index_statement,
      $.alter_table_statement,
      $.do_block,
    ),

    _with_query_statement: $ => choice(
      $.select_statement,
      $.insert_statement,
      $.delete_statement,
      $.update_statement,
    ),

    insert_statement: $ => seq(
      optional($.with_query),
      kw("insert"), kw("into"), $.identifier, optional($.as),
      optional($._list_of_identifiers),
      $.insert_items, optional($.insert_conflict),
      optional($.returning),
      optional($.into),
    ),
    insert_items: $ => choice(
      seq(kw("default"), kw("values")),
      seq(kw("values"), "(", commaSep($.insert_item), ")"),
      $.select_statement
    ),
    insert_item: $ => choice(
      kw("default"),
      $._value_expression,
    ),
    insert_conflict: $ => choice(
      seq(kw("on"), kw("conflict"), optional($.conflict_target), kw("do"), kw("nothing")),
      seq(
        kw("on"), kw("conflict"), $.conflict_target, kw("do"), kw("update"), kw("set"),
        commaSep1($.update_set), optional($.where_filter)
      ),
    ),
    conflict_target: $ => choice(
      seq(kw("on"), kw("constraint"), $.identifier),
      seq("(", commaSep($._value_expression), ")", ),
    ),
    update_set: $ => choice(
      seq($.identifier, "=", $.update_value),
      seq($._list_of_identifiers, "=", optional(kw("row")), "(", commaSep1($.update_value), ")"),
    ),
    update_value: $ => choice(kw("default"), $._value_expression),
    grant_statement: $ => seq(
      kw("grant"), $.grant_privileges,
      kw("on"), $.grant_targets,
      kw("to"), $.grant_roles,
    ),

    grant_roles: $ => commaSep1(choice(
      kw("public"),
      kw("current_user"),
      kw("session_user"),
      seq(optional(kw("group")), $.identifier),
    )),


    grant_privileges: $ => choice(
      seq(kw("all"), optional(kw("privileges"))),
      commaSep1($.identifier),
    ),

    grant_targets: $ => choice(
      seq(
        kw("all"),
        choice(kw("tables"), kw("sequences"), kw("functions")),
        kw("in"), kw("schema"), $.identifier
      ),
      seq(kw("sequence"), commaSep1($.identifier)),
      seq(optional(kw("table")), commaSep1($.identifier)),
      seq(kw("schema"), commaSep1($.identifier)),
      seq(
        choice(kw("function"), kw("procedure"), kw("routine")),
        commaSep1($.grant_function),
      ),
    ),

    grant_function: $ => seq(
      $.identifier,
      "(", 
      commaSep1(seq(optional($.identifier), $._type)),
      ")",
    ),

    _plpgsql_statement: $ => seq(
      choice(
        $._statement,
        $.assign_statement,
        $.get_diagnostics_statement,
        $.return_statement,
        $.raise_statement,
        $.if_statement,
        $.for_statement,
        $.execute_statement,
        $.perform_statement,
      ),
      ";",
    ),

    get_diagnostics_statement: $ => seq(kw("get"), optional(kw("current")), kw("diagnostics"), $.assign_statement),

    for_statement: $ => seq(
      kw("for"), commaSep1($.identifier), kw("in"), choice(
        seq(
          optional(kw("reverse")),
          $._value_expression, "..", $._value_expression,
          optional(seq(kw("by"), $._value_expression))
        ),
        $.select_statement,
        $.execute_statement,
      ),
      kw("loop"),
      repeat($._plpgsql_statement),
      kw("end"), kw("loop")
    ),

    // TODO(chrde): https://www.postgresql.org/docs/13/plpgsql-errors-and-messages.html
    if_statement: $ => seq(
      kw("if"), $._value_expression, kw("then"), repeat1($._plpgsql_statement),
      repeat(seq(
        choice(kw("elsif"), kw("elseif")),
        $._value_expression, kw("then"), repeat1($._plpgsql_statement)
      )),
      optional(seq(kw("else"), repeat1($._plpgsql_statement))),
      kw("end"), kw("if"),
    ),

    execute_statement: $ => seq(
      kw("execute"),
      $._value_expression,
      optional($.into),
      optional($.execute_using),
    ),
    execute_using: $ => seq(kw("using"), commaSep1($._value_expression)),
    assign_statement: $ => seq($.identifier, choice("=", ":="), $._value_expression),
    return_statement: $ => seq(kw("return"), choice(
      seq(kw("query"), $.select_statement),
      seq(kw("query"), $.execute_statement),
      $._value_expression),
    ),
    do_block: $ => seq(
      kw("do"),
      $.block,
    ),

    select_statement: $ => prec.left(seq(
      optional($.with_query),
      kw("select"),
      commaSep($.select_item),
      optional($.into),
      optional($.select_from),
      optional($.select_where),
      optional($.select_group_by),
      optional($.select_having),
      optional($.select_order_by),
      optional($._select_limit_offset),
      optional($.into),
    )),

    with_query: $ => seq(kw("with"), commaSep1($.with_query_item)),
    with_query_item: $ => seq(
      $.identifier,
      optional($._list_of_identifiers),
      kw("as"),
      optional(choice(kw("materialized"), seq(kw("not"), kw("materialized")))),
      "(", $._with_query_statement, ")"
    ),
    into: $ => seq(kw("into"), optional(kw("strict")), commaSep1($.identifier)),
    _select_limit_offset: $ => choice(
      seq($.select_limit, optional($.select_offset)),
      seq($.select_offset, optional($.select_limit)),
    ),
    select_item: $ => seq(
      $._value_expression,
      optional(kw("as")),
      optional($.identifier)
    ),
    select_from: $ => seq(kw("from"), commaSep1($.from_item)),
    from_item: $ => prec.left(seq(
      // TODO(chrde): https://www.postgresql.org/docs/current/sql-select.html
      choice(
        $.from_select,
        $.from_table,
        $.from_function,
      ),
      repeat($.join_item),
    )),
    from_table: $ => seq($.identifier, optional(kw("as")), optional($.identifier)),
    block: $ => seq(
      $.dollar_quote,
      repeat($.declarations),
      $.body,
      $.dollar_quote,
    ),

    body: $ => seq(
      kw("begin"),
      repeat($._plpgsql_statement),
      kw("end"),
      optional(";"),
    ),

    dollar_quote: $ => seq("$", optional($.identifier), "$"),

    if_exists: $ => seq(kw("if"), kw("exists")),
    as: $ => seq(kw("as"), $.identifier),

    _type: $ => seq(
      choice($.predefined_types, $.identifier),
      optional(choice(
        repeat1(seq("[", "]")),
        kw("%rowtype"),
        kw("%type")))
    ),

// predefined_type:
//   | BIGINT { BigInt }
//   | BIT VARYING? l = type_length? { BitVarying(l) }
//   | BOOLEAN { Boolean }
//   | CHAR VARYING? l = type_length? { Char(l) }
//   | CHARACTER VARYING? l = type_length? { Char(l) }
//   | DEC p = precision_param? { Dec(p) }
//   | DECIMAL p = precision_param? { Decimal(p) }
//   | DOUBLE PRECISION { Double }
//   | FLOAT p = precision_param? { Float(p) }
//   | INT { Int }
//   | INTEGER { Integer }
//   | INTERVAL interval = interval_field? l = type_length? { Interval(interval, l) }
//   | NCHAR VARYING? l = type_length? { Nchar(l) }
//   | NUMERIC p = precision_param? { Numeric(p) }
//   | REAL { Real }
//   | SMALLINT { SmallInt }
//   | TEXT { Text }
//   (* | TIME l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIME l = type_length? WITH TIME ZONE { TimeTz(l) }
//   | TIME l = type_length? WITHOUT TIME ZONE { Time(l) }
//   (* | TIMESTAMP l = type_length? (1* NOTE(chrde): what here? *1) *)
//   | TIMESTAMP l = type_length? WITH TIME ZONE { TimestampTz(l) }
//   | TIMESTAMPTZ l = type_length? { TimestampTz(l) }
//   | TIMESTAMP l = type_length? WITHOUT TIME ZONE { Timestamp(l) }
//   | VARCHAR l = type_length? { VarChar(l) }
//   (* | schema_qualified_name_nontype (LEFT_PAREN vex (COMMA vex)* RIGHT_PAREN)? *)
    // TODO(chrde): moar types!!
    string: $ => seq(
      "'",
      repeat(choice(
        prec(1, /''/),
        prec(2, /[^']/),
      )),
       "'",
    ),

    // NOTE(chrde): taken from https://github.com/tree-sitter/tree-sitter-javascript/blob/1ddbf1588c353edab37791cdcc9f17e56fb4ea73/grammar.js#L899
    _value_expression: $ => choice(
      $.number,
      $.dollar_quote_string,
      $.string,
      $.true,
      $.false,
      $.null,
      $.star,
      seq("(", $.select_statement, ")"),
      seq("(", commaSep1($._value_expression), ")"),
      $.function_call,
      $.array_constructor,
      $.op_expression,
      $.time_expression,
      // TODO(chrde): this one feels a bit hacky? perhaps move to identifier regexp
      seq($.identifier, ".", $.star),
      $.identifier,
    ),

    dollar_quote_string: $ => seq(
      "$", $._identifier, "$",
        /(([^$]+)|(%\d+\$s)|(\$\d+))+/,
        //                     ^
        //                     |- matches $1 (execute ... using placeholders)
        //           ^
        //           |- matches %d1s (format placeholders)
        //  ^
        //  |- matches anything other than $
      "$", $._identifier, "$",
    ),

    function_call: $ => seq(
      $.identifier,
      "(",
      choice(
        $.select_statement,
        commaSep($._value_expression),
      ),
      ")"
    ),

    op_expression: $ => choice(
      prec.left(12, seq($._value_expression, $.cast, $._type)),
      // array access
      prec.right(10, seq(choice($.minus, $.plus), $._value_expression)),
      // ^
      prec.left(8, seq($._value_expression, choice("*", "/", "%"), $._value_expression,)),
      prec.left(7, seq($._value_expression, choice("-", "+"), $._value_expression,)),
      prec.left(6, seq($._value_expression, $.other_op, $._value_expression)),
      prec.left(5, seq($._value_expression, $.contains_op, $._value_expression,)),
      prec.left(4, seq($._value_expression, $.comparison_op, $._value_expression,)),
      prec.left(3, seq($._value_expression, $.comparison_kw, $._value_expression,)),
      prec.left(3, seq($._value_expression, $.comparison_null)),
      prec.right(2, seq($.not, $._value_expression)),
      prec.left(1, seq($._value_expression, choice($.and, $.or), $._value_expression,)),
    ),

    _list_of_identifiers: $ => seq("(", commaSep($.identifier), ")"),

    // TODO(chrde): https://www.postgresql.org/docs/13/sql-syntax-lexical.html
    comparison_op: $ => choice("<", ">", "=", "<=", ">=", "<>", "!="),
    // TODO(chrde): is there a better name other than `contains_op`?
    comparison_null: $ => choice(
      kw("is null"),
      kw("isnull"),
      kw("is not null"),
      kw("notnull"),
    ),
    comparison_kw: $ => choice(
      kw("is"),
      kw("is distinct from"),
      kw("is not distinct from")
    ),
    // TODO(chrde): this should be a regex
    true: $ => kw("true"),
    star: $ => "*",
    number: $ => /-?\d+/,
    identifier: $ => $._identifier,
    _identifier: $ => /[a-zA-Z0-9_]+(\.?[a-zA-Z0-9_]+)*/,
    //                                ^
    //                                |- we dont want to match consecutive dots, e.g: 1..2 consists of 3 tokens
  }
});
