corpus/drop_type_statement.txt
================================================================================
basic
================================================================================
drop type foo;
--------------------------------------------------------------------------------

(source_file
  (drop_type_statement
    (identifier)))

================================================================================
many at once
================================================================================
drop type foo, bar;
--------------------------------------------------------------------------------

(source_file
  (drop_type_statement
    (identifier)
    (identifier)))

================================================================================
cascade
================================================================================
drop type foo cascade;
--------------------------------------------------------------------------------

(source_file
  (drop_type_statement
    (identifier)))

================================================================================
restrict
================================================================================
drop type foo restrict;
--------------------------------------------------------------------------------

(source_file
  (drop_type_statement
    (identifier)))

================================================================================
if exists
================================================================================
drop type if exists foo;
--------------------------------------------------------------------------------

(source_file
  (drop_type_statement
    (if_exists)
    (identifier)))
